JS fixes. Cart fixes. Table wrap fix.

--- a/themes/bootstrap3/less/core.less
+++ b/themes/bootstrap3/less/core.less
@@ -1,5 +1,9 @@
 @import "bootstrap";
 
+.badge a {color:#FFF}
+
+.table > tbody > tr > td {word-break:break-all}
+
 .twitter-typeahead {
   background: #FFF;
   padding: 7px 0 10px;
